--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,7 +25,7 @@ env:
 jobs:
 
   # Build Docker Images
-  docker:
+  docker-build:
     runs-on: ubuntu-latest
     steps:
 
@@ -95,7 +95,14 @@ jobs:
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.licenses=${{ github.event.repository.license.spdx_id }}
 
-      # View Image Digest
-      -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+  ghcr-cleanup:
+    runs-on: ubuntu-latest
+    needs: docker-build
+    steps:
+
+      # Github delete old untagged packages
+      - name: Delete untagged images
+        uses: actions/delete-package-versions@v1
+        with:
+          package-name: ${{env.PACKAGE_NAME}}
+          num-old-versions-to-delete: 3
