--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -76,10 +76,19 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: delete old pacakge
+        uses: sujaykumarh/gh-action-del-gh-pkg@v1
+        with:
+          GITHUB_TOKEN: ${{ secrets.PAT_GITHUB }}
+          PACKAGE: ${{ env.PACKAGE_NAME }}
+          TYPE: 'container'
+          DRY_RUN: 'false'
+
       # Build & Publish Docker Images
       -
         name: Build and push
         id: docker_build
+        if: always()
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -96,15 +105,3 @@ jobs:
             org.opencontainers.image.created=${{ steps.prep.outputs.created }}
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.licenses=${{ github.event.repository.license.spdx_id }}
-
-  # ghcr-cleanup:
-  #   runs-on: ubuntu-latest
-  #   needs: docker-build
-  #   steps:
-
-  #     # Github delete old untagged packages
-  #     - name: Delete untagged images
-  #       uses: actions/delete-package-versions@v1
-  #       with:
-  #         package-name: ${{env.PACKAGE_NAME}}
-  #         num-old-versions-to-delete: 3
