--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -39,7 +39,7 @@ jobs:
 
       # Pull Source Code
       -
-        name: Checkout
+        name: 📥 Pull source code
         uses: actions/checkout@v2
 
       # Set up QEMU env
@@ -53,7 +53,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       ## Prepare env
-      - name: Prepare env
+      - name: 📦 Prepare env
         id:   prep
         run: |
           DKHUB_IMAGE=${{ env.DKHUB_SLUG }}
@@ -69,30 +69,22 @@ jobs:
 
       ## Login
       -
-        name: Login to DockerHub
+        name: 🔐 Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       -
-        name: Login to GHCR
+        name: 🔐 Login to GHCR
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: delete old pacakge
-        uses: sujaykumarh/gh-action-del-gh-pkg@v1
-        with:
-          GITHUB_TOKEN: ${{ secrets.PAT_GITHUB }}
-          PACKAGE: ${{ env.PACKAGE_NAME }}
-          TYPE: 'container'
-          DRY_RUN: 'false'
-
       # Build & Publish Docker Images
       -
-        name: Build and push
+        name: ⛏️ 🐳 Build and 🚀 push
         id: docker_build
         if: always()
         uses: docker/build-push-action@v2
@@ -111,3 +103,11 @@ jobs:
             org.opencontainers.image.created=${{ steps.prep.outputs.created }}
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.licenses=${{ github.event.repository.license.spdx_id }}
+
+      - name: 🗑️ Purge untagged packages from ghcr
+        uses: sujaykumarh/delete-untagged-containers@main
+        with:
+          package_name: laraondock
+          user: sujaykumarh
+          # This is a person access token with
+          token: ${{ secrets.PAT_GITHUB }}
